# libacovea

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.pre5.0  LICENSE.NON-FREE  LICENSE.POLICY  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  acovea.pc.in  configure  configure.ac  reconf
benchmarks/: almabench.c  distbench.c  evobench.c  fftbench.c  huffbench.c  linbench.c  mat1bench.c  treebench.c
cmdline/: Makefile.am  Makefile.in  runacovea.cpp
config/: Makefile.example  g++34_opteron.acovea  g++34_pentium3.acovea  g++34_pentium4.acovea  g++40_opteron.acovea  g++40_pentium4.acovea  g9540_opteron.acovea  g9540_pentium3.acovea  g9540_pentium4.acovea  gcc34_intel.acovea  gcc34_opteron.acovea  gcc34_opteron_makefile.acovea  gcc34_opteron_size.acovea  gcc34_pentium3.acovea  gcc34_pentium4.acovea  gcc40_opteron.acovea  gcc40_opteron_makefile.acovea  gcc40_opteron_nofm.acovea  gcc40_opteron_size.acovea  gcc40_pentium4.acovea  gcc41_opteron_nofm.acovea
libacovea/: Makefile.am  Makefile.in  acovea.cpp  acovea.h
